samples/_failures_safe/1761071133_a75ab0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_201cb5a9.c: In function ‘main’:
./samples/SAFE/__tmp_201cb5a9.c:143:5: error: expected declaration or statement at end of input
  143 |     for (int i = 0; i < 100000; i++) {
      |     ^~~
./samples/SAFE/__tmp_201cb5a9.c:143:5: error: expected declaration or statement at end of input
